maze.lessons.maze.island.IslandMaze.scala.error
Escaper:24: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  setDirection(Direction.NORTH)
  ^Escaper:25: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(isFacingWall())
  ^Escaper:26: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  	return true
        ^